
u8glib ChangeLog

2012-01-01      v0.01   Oliver Kraus <olikraus@gmail.com>
  * first beta release for Arduino IDE with simple SSD1325 support
2012-01-04      v0.02   Oliver Kraus <olikraus@gmail.com>
  * support for some more display types
2012-01-07      v0.03   Oliver Kraus <olikraus@gmail.com>
  * fixed some bugs, added more examples
2012-01-07      v0.04   Oliver Kraus <olikraus@gmail.com>
  * single font file
2012-01-08      v0.05   Oliver Kraus <olikraus@gmail.com>
  * Cleanup
  * More examples
  * SSD1325 graylevel support
2012-01-15      v0.06   Oliver Kraus <olikraus@gmail.com>
  * LM6063 support
2012-01-17      v0.07   Oliver Kraus <olikraus@gmail.com>
  * LM6063 support (update)
2012-01-19      v0.08   Oliver Kraus <olikraus@gmail.com>
  * ST7920 beta device
2012-01-21      v0.09   Oliver Kraus <olikraus@gmail.com>
  * ST7920 fixed (192x32)
  * fixed bug in com layer if pins are none
  * str reference position
2012-01-22      v0.10   Oliver Kraus <olikraus@gmail.com>
  * Experimental LM6059 
2012-01-24      v0.11   Oliver Kraus <olikraus@gmail.com>
  * new st7920 memory layout for 128x64 lcd
  * experimental st7920 SPI
2012-01-25      v0.12   Oliver Kraus <olikraus@gmail.com>
  * fixed st7920 memory layout for 128x64 lcd
  * ST7920 SPI performance improvement
2012-01-27	v0.13	Oliver Kraus <olikraus@gmail.com>
  * LM6059 (Adafruit Display) fixed
